Project/src/yal2jvm.java
/* Generated By:JJTree&JavaCC: Do not edit this line. yal2jvm.java */
import java.io.FileInputStream;
import java.io.File;
import java.io.IOException;
import java.io.FileNotFoundException;

public class yal2jvm/*@bgen(jjtree)*/implements yal2jvmTreeConstants, yal2jvmConstants {/*@bgen(jjtree)*/
  protected static JJTyal2jvmState jjtree = new JJTyal2jvmState();static java.util.Stack argStack;
        public static void main(String[] args) throws ParseException{
                argStack = new java.util.Stack();

                File filename = new File(args[0]);
                try {
                        yal2jvm parser = new yal2jvm(new FileInputStream(filename));
                        SimpleNode root = parser.Module();

                        root.dump("");

                        SymbolTable symbolTable = new SymbolTable();

                        System.out.println("\u005cn\u005cnCommencing Semantic Analysis.");
                        System.out.println("Checking Operations.\u005cn");

                        symbolTable.fillSymbols(root);

                        System.out.println("Checking Calls.\u005cn");

                        //if (!symbolTable.hasErrors()) {
                                System.out.println("\u005cn\u005cnCommencing Code Generation.\u005cn\u005cn");

                                String filenameWthExt = filename.getName().replaceFirst("[.][^.]+$","");

                                Sampler sampler = new Sampler("codeGenerated/" + filenameWthExt + ".j");
                                Generator generator = new Generator(sampler, symbolTable);

                                ASTModule rootModule = (ASTModule) root;
                                rootModule.generatorVisit(generator);
                        //}

                } catch(FileNotFoundException e) {
                        System.out.println("Exception found");
                }

        }

// MAIN BLOCKS OF INFORMATION 

/**
 * Main Module
*/
  static final public SimpleNode Module() throws ParseException {
                      /*@bgen(jjtree) Module */
                      ASTModule jjtn000 = new ASTModule(JJTMODULE);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token moduleName;
    try {
      try {
        jj_consume_token(MODULE);
        moduleName = jj_consume_token(ID);
                 jjtn000.name = moduleName.image;
        jj_consume_token(LCHAVETA);
      } catch (ParseException e) {
                System.out.println("Error on module start, with Exception thrown " + e.toString());
                Token t = getToken(0);
                try {
                        if (t.kind == LCHAVETA)
                                getNextToken();
                        else
                                error_skipto(PVIRG);
                } catch (ParseException e2) {
                        System.out.println("Error on module");
                }
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Declaration();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FUNCTION:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Function();
      }
      try {
        jj_consume_token(RCHAVETA);
                               {if (true) return jjtn000;}
      } catch (ParseException e) {
                System.out.println("Error on module end, with Exception thrown " + e.toString());
                {if (true) return jjtn000;}
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * Function, where the file's statement list lies.
*/
  static final public void Function() throws ParseException {
                  /*@bgen(jjtree) Function */
                  ASTFunction jjtn000 = new ASTFunction(JJTFUNCTION);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token name;
    try {
      try {
        jj_consume_token(FUNCTION);
        name = jj_consume_token(ID);
                                       jjtn000.functionName = name.image; jjtn000.returnType = Utils.VOID;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGN:
        case 32:
                   jjtn000.returnType = Utils.SCALAR; jjtn000.returnValue = name.image;
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 32:
            ArrayElement(name);
                                                      jjtn000.returnType = Utils.ARRAY;
            break;
          default:
            jj_la1[2] = jj_gen;
            ;
          }
          jj_consume_token(ASSIGN);
          name = jj_consume_token(ID);
                                                                                                                jjtn000.functionName = name.image;
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        VarList();
      } catch (ParseException e) {
                System.out.println("Error on function statement, with Exception thrown " + e.toString());
                try {
                        error_skipto(PVIRG);
                } catch (ParseException e2) {
                        System.out.println("Error on function");
                }
      }
      Stmtlst();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** 
 * Declaration, handling definitions and assignment of variables outside functions.
*/
  static final public void Declaration() throws ParseException {
                     /*@bgen(jjtree) Declaration */
                     ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);String declaration; Token tmp; Token tmp2;
    try {
      try {
        tmp = jj_consume_token(ID);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 32:
          ArrayElement(tmp);
                                      jjtn000.setType(Utils.DECLARATION_ARRAY);
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
                                                                                     jjtn000.value = tmp.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGN:
          jj_consume_token(ASSIGN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 32:
            ArraySize();
                                            jjtn000.setType(Utils.DECLARATION_ARRAY);
            break;
          case ADDSUB_OP:
          case INTEGER:
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ADDSUB_OP:
              tmp = jj_consume_token(ADDSUB_OP);
                         jjtn000.setOperator(tmp.image);
              break;
            default:
              jj_la1[5] = jj_gen;
              ;
            }
            tmp2 = jj_consume_token(INTEGER);
                                                                             jjtn000.setAssigned(tmp2.image); jjtn000.setType(Utils.DECLARATION_SCALAR);
            break;
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        jj_consume_token(PVIRG);
      } catch (ParseException e) {
                System.out.println("Error on declaration, with Exception thrown " + e.toString());

                error_skipto(PVIRG);
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * VarList, the set of variables of a specific function.
*/
  static final public void VarList() throws ParseException {
                 /*@bgen(jjtree) VarList */
                 ASTVarList jjtn000 = new ASTVarList(JJTVARLIST);
                 boolean jjtc000 = true;
                 jjtree.openNodeScope(jjtn000);String variables; Token tmp;
    try {
      try {
        jj_consume_token(LPAR);
      } catch (ParseException e) {
                System.out.println("Error on argument list, no opening parenthesis.");
                System.out.println("Specific Exception thrown:" + e.toString());
      }
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          Var();
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case VIRG:
              ;
              break;
            default:
              jj_la1[8] = jj_gen;
              break label_3;
            }
            jj_consume_token(VIRG);
            Var();
          }
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        jj_consume_token(RPAR);
      } catch (ParseException e) {
                System.out.println("Error on argument list variables or closing parenthesis.");
                System.out.println("Specific Exception thrown: "+ e.toString());


                error_skipto_unless(PVIRG, RPAR);
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * StmtList, the set of all statements inside a function. Opening and 
 * closing brackets are inside this list, to better detect and isolate 
 * exceptions thrown.
*/
  static final public void Stmtlst() throws ParseException {
    try {
      jj_consume_token(LCHAVETA);
    } catch (ParseException e) {
                System.out.println("Error on statement list, opening bracket not detected."
                        +"\u005cnSpecific exception: " + e.toString());
                error_skipto_withoutconsuming(ID);
                {if (true) return;}
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE:
      case IF:
      case ID:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      Stmt();
    }
    try {
      jj_consume_token(RCHAVETA);
    } catch (ParseException e) {
                System.out.println("Error on statement list, closing bracket not detected."
                        +"\u005cnSpecific exception: " + e.toString());
                error_skipto(ID);
    }
  }

// STATEMENT INFORMATION

/**
 * Statement, the main code unit inside a function. It includes the assign
 * of variables, the call of functions, if/else blocks and while loops.
*/
  static final public void Stmt() throws ParseException {
                    Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE:
        While();
        break;
      case IF:
        If();
        break;
      case ID:
        t = jj_consume_token(ID);
        if (jj_2_1(2)) {
          Call(t);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGN:
          case DOT:
          case 32:
            Assign(t);
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(PVIRG);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                System.out.println("Error on a statement, maybe missing ';'\u005cnSpecific Exception thrown: ."
                + e.toString());
                error_skipto(PVIRG);
    }
  }

/**
 * Call, where a method is invoked.
 * @param Token t contains ID information for printing.
*/
  static final public void Call(Token t) throws ParseException {
                     /*@bgen(jjtree) Call */
                     ASTCall jjtn000 = new ASTCall(JJTCALL);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);String string; Token tmp;
    try {
         jjtn000.value = t.image; jjtn000.setType(Utils.CALL); jjtn000.calledFunction = t.image;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          jj_consume_token(DOT);
          tmp = jj_consume_token(ID);
                 jjtn000.setType(Utils.EXTERNAL_CALL); jjtn000.packageName = (String) jjtn000.value; jjtn000.calledFunction = tmp.image;
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        jj_consume_token(LPAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER:
        case ID:
        case STRING:
          ArgumentList();
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        jj_consume_token(RPAR);
      } catch (ParseException e) {
                System.out.println("Error on call."
                        +"\u005cnSpecific exception: " + e.toString());
                error_skipto_unless(PVIRG, LCHAVETA);
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Assign to handle all the assignment of variables, be they scalar or arrays.
 * @param Token t contains ID information for printing.
*/
  static final public void Assign(Token t) throws ParseException {
                       /*@bgen(jjtree) Assign */
                       ASTAssign jjtn000 = new ASTAssign(JJTASSIGN);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);String string;
    try {
      try {
        LhsNoID(t);
        jj_consume_token(ASSIGN);
        Rhs();
      } catch (ParseException e) {
                System.out.println("Error on assign."
                        +"\u005cnSpecific exception: " + e.toString());

                error_skipto(PVIRG);
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * While loop.
*/
  static final public void While() throws ParseException {
               /*@bgen(jjtree) While */
               ASTWhile jjtn000 = new ASTWhile(JJTWHILE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t; String tmp;
    try {
      try {
        jj_consume_token(WHILE);
        Exprtest();
        Stmtlst();
      } catch (ParseException e) {
                System.out.println("Error on while");
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * If block.
*/
  static final public void If() throws ParseException {
            /*@bgen(jjtree) If */
             ASTIf jjtn000 = new ASTIf(JJTIF);
             boolean jjtc000 = true;
             jjtree.openNodeScope(jjtn000);String tmp;
    try {
      try {
        jj_consume_token(IF);
        Exprtest();
        Stmtlst();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ELSE:
          Else();
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
      } catch (ParseException e) {
                System.out.println("Error on if");
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Else block, may or may not exist after if block.
*/
  static final public void Else() throws ParseException {
              /*@bgen(jjtree) Else */
  ASTElse jjtn000 = new ASTElse(JJTELSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(ELSE);
        Stmtlst();
      } catch (ParseException e) {
                System.out.println("Error on else");
                error_skipto(PVIRG);
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Lhs, the left side of a two-sided operation, such as a comparison or assigment.
 * @return String containing information of lhs block.
*/
  static final public void Lhs() throws ParseException {
                   Token t;
    t = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      ArrayAccess(t);
      break;
    default:
      jj_la1[16] = jj_gen;
      ScalarAccess(t);
    }
  }

/**
 * LhsNoID, particular use of Lhs, specific for a function to remove ambiguity 
 * while maintaining readability.
 * @return String containing information of lhs block, excluding <ID>.
*/
  static final public void LhsNoID(Token t) throws ParseException {
                              String tmp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      ArrayAccess(t);
      break;
    default:
      jj_la1[17] = jj_gen;
      ScalarAccess(t);
    }
  }
